--- a/sass/style.scss
+++ b/sass/style.scss
@@ -143,6 +143,10 @@ img {
 		line-height: 1.5;
 		position: fixed;
 
+		@include media-breakpoint-down(xs) {
+			position: relative;
+		}
+
 		h1 {
 			font-family: 'Yantramanav', sans-serif;
 			font-size: 40px;
@@ -179,7 +183,7 @@ img {
 
 	@include media-breakpoint-up(xs) {
 		background-image: url('../img/laptop.svg'), url('../img/glasses and tea.svg'), url('../img/stationery.svg');
-		background-attachment: fixed;
+		background-attachment: scroll;
 		background-position: 50% -8%, 25% 500px, 75% 400px;
 		background-repeat: no-repeat, no-repeat, no-repeat;
 		background-size: 45%, 27.5%, 30%;
