--- a/css/style.css
+++ b/css/style.css
@@ -7984,11 +7984,8 @@ img {
     font-weight: 200;
     color: #666;
     line-height: 1.5;
-    position: fixed;
+    position: absolute;
     margin-top: 200px; }
-    @media (max-width: 575px) {
-      .intro .description {
-        position: relative; } }
     .intro .description h1 {
       font-family: 'Yantramanav', sans-serif;
       font-size: 40px;
@@ -8017,7 +8014,7 @@ img {
   @media (min-width: 576px) {
     .intro {
       background-image: url("../img/laptop.svg"), url("../img/glasses and tea.svg"), url("../img/stationery.svg");
-      background-attachment: fixed;
+      background-attachment: scroll;
       background-position: 50% -25%, 25% 450px, 75% 350px;
       background-repeat: no-repeat, no-repeat, no-repeat;
       background-size: 40%, 22.5%, 25%;
