--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,11 +17,6 @@ body {
     font-size: $font-size-sm;
 }
 
-img {
-	max-width: 100%;
-	max-height: 100%;
-}
-
 .head {
 	position: absolute;
 	top: 0;
@@ -520,7 +515,18 @@ img {
 		background: #f5f5f5;
 		padding-top: 30px;
 		padding-bottom: 30px;
-		text-align: center;
+	}
+
+	.project-info {
+		div {
+			@include media-breakpoint-down(xs) {
+				margin-bottom: 30px;
+
+				&:last-child {
+					margin-bottom: 0;
+				}
+			}
+		}
 	}
 
 	h3 {
