--- a/css/style.css
+++ b/css/style.css
@@ -5885,30 +5885,33 @@ body {
 .aboutandcontact .row .inputbutton:hover {
   color: #333; }
 
-.work-intro, .oneservice-intro, .investingnote-intro, .accenture-intro, .srina-intro, .projectshowcase-intro, .about-intro {
+.work-intro, .snapstyle-intro, .accenture-intro, .oneservice-intro, .investingnote-intro, .srina-intro, .projectshowcase-intro, .about-intro {
   background-color: #e9e9e9;
   padding-top: 120px;
   padding-bottom: 60px;
   text-align: center; }
-  .work-intro h1, .oneservice-intro h1, .investingnote-intro h1, .accenture-intro h1, .srina-intro h1, .projectshowcase-intro h1, .about-intro h1 {
+  .work-intro h1, .snapstyle-intro h1, .accenture-intro h1, .oneservice-intro h1, .investingnote-intro h1, .srina-intro h1, .projectshowcase-intro h1, .about-intro h1 {
     font-family: 'Yantramanav', sans-serif;
     font-size: 40px;
     font-weight: 300;
     color: #000; }
-  .work-intro h2, .oneservice-intro h2, .investingnote-intro h2, .accenture-intro h2, .srina-intro h2, .projectshowcase-intro h2, .about-intro h2 {
+  .work-intro h2, .snapstyle-intro h2, .accenture-intro h2, .oneservice-intro h2, .investingnote-intro h2, .srina-intro h2, .projectshowcase-intro h2, .about-intro h2 {
     font-family: 'Yantramanav', sans-serif;
     font-size: 18px;
     font-weight: 300;
     color: rgba(0, 0, 0, 0.48); }
+
+.snapstyle-intro {
+  background-color: #f68c79; }
+
+.accenture-intro {
+  background-color: #80cbc4; }
 
 .oneservice-intro {
   background-color: #8ce0e4; }
 
 .investingnote-intro {
   background-color: #d6e9da; }
-
-.accenture-intro {
-  background-color: #80cbc4; }
 
 .srina-intro {
   background-color: #ccb7b6; }
@@ -5925,11 +5928,11 @@ body {
   height: 500px;
   width: 100%; }
 
-.work-summary .row, .accenture-summary .row, .investingnote-summary .row, .oneservice-summary .row, .srina-summary .row {
+.work-summary .row, .snapstyle-summary .row, .accenture-summary .row, .investingnote-summary .row, .oneservice-summary .row, .srina-summary .row {
   margin-top: 30px;
   margin-bottom: 30px; }
 
-.work-summary h2, .accenture-summary h2, .investingnote-summary h2, .oneservice-summary h2, .srina-summary h2 {
+.work-summary h2, .snapstyle-summary h2, .accenture-summary h2, .investingnote-summary h2, .oneservice-summary h2, .srina-summary h2 {
   font-family: 'Yantramanav', sans-serif;
   font-size: 25px;
   font-weight: 300;
@@ -5937,18 +5940,18 @@ body {
   margin-bottom: 15px;
   text-align: center; }
 
-.work-summary .greybg, .accenture-summary .greybg, .investingnote-summary .greybg, .oneservice-summary .greybg, .srina-summary .greybg {
+.work-summary .greybg, .snapstyle-summary .greybg, .accenture-summary .greybg, .investingnote-summary .greybg, .oneservice-summary .greybg, .srina-summary .greybg {
   background: #f5f5f5;
   padding-top: 30px;
   padding-bottom: 30px; }
 
 @media (max-width: 575px) {
-  .work-summary .project-info div, .accenture-summary .project-info div, .investingnote-summary .project-info div, .oneservice-summary .project-info div, .srina-summary .project-info div {
+  .work-summary .project-info div, .snapstyle-summary .project-info div, .accenture-summary .project-info div, .investingnote-summary .project-info div, .oneservice-summary .project-info div, .srina-summary .project-info div {
     margin-bottom: 30px; }
-    .work-summary .project-info div:last-child, .accenture-summary .project-info div:last-child, .investingnote-summary .project-info div:last-child, .oneservice-summary .project-info div:last-child, .srina-summary .project-info div:last-child {
+    .work-summary .project-info div:last-child, .snapstyle-summary .project-info div:last-child, .accenture-summary .project-info div:last-child, .investingnote-summary .project-info div:last-child, .oneservice-summary .project-info div:last-child, .srina-summary .project-info div:last-child {
       margin-bottom: 0; } }
 
-.work-summary h3, .accenture-summary h3, .investingnote-summary h3, .oneservice-summary h3, .srina-summary h3 {
+.work-summary h3, .snapstyle-summary h3, .accenture-summary h3, .investingnote-summary h3, .oneservice-summary h3, .srina-summary h3 {
   font-family: 'Yantramanav', sans-serif;
   font-size: 18px;
   font-weight: normal;
@@ -5957,7 +5960,7 @@ body {
   margin-bottom: 15px;
   text-align: center; }
 
-.work-summary h4, .accenture-summary h4, .investingnote-summary h4, .oneservice-summary h4, .srina-summary h4 {
+.work-summary h4, .snapstyle-summary h4, .accenture-summary h4, .investingnote-summary h4, .oneservice-summary h4, .srina-summary h4 {
   font-family: 'Yantramanav', sans-serif;
   font-size: 16px;
   font-weight: bold;
@@ -5994,6 +5997,15 @@ body {
   .image-block {
     margin-right: 120px;
     margin-left: 120px; } }
+
+.snapstyle-summary h2 {
+  color: #e7204e; }
+
+.snapstyle-summary .video-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center; }
 
 .accenture-summary h2 {
   color: #00867d; }
