--- a/css/style.css
+++ b/css/style.css
@@ -5902,7 +5902,7 @@ body {
     color: rgba(0, 0, 0, 0.48); }
 
 .snapstyle-intro {
-  background-color: #f68c79; }
+  background-color: #ffe0e6; }
 
 .accenture-intro {
   background-color: #80cbc4; }
@@ -5967,6 +5967,12 @@ body {
   color: #333;
   margin: 15px;
   text-align: center; }
+
+.work-summary blockquote, .snapstyle-summary blockquote, .accenture-summary blockquote, .investingnote-summary blockquote, .oneservice-summary blockquote, .srina-summary blockquote {
+  font-size: 1rem;
+  color: #999;
+  border-left: 1px solid #d5d5d5;
+  padding-left: 20px; }
 
 .text-block {
   line-height: 2; }
