--- a/sass/style.scss
+++ b/sass/style.scss
@@ -461,7 +461,7 @@ body {
 
 .snapstyle-intro {
 	@extend .work-intro;
-	background-color: #f68c79;
+	background-color: #ffe0e6;
 }
 
 .accenture-intro {
@@ -551,6 +551,13 @@ body {
 		color: #333;
 		margin: 15px;
 		text-align: center;
+	}
+
+	blockquote {
+		font-size: 1rem;
+		color: #999;
+		border-left: 1px solid #d5d5d5;
+		padding-left: 20px;
 	}
 }
 
