--- a/css/style.css
+++ b/css/style.css
@@ -5974,6 +5974,16 @@ body {
   border-left: 1px solid #d5d5d5;
   padding-left: 20px; }
 
+.work-summary .prototype-link, .snapstyle-summary .prototype-link, .accenture-summary .prototype-link, .investingnote-summary .prototype-link, .oneservice-summary .prototype-link, .srina-summary .prototype-link {
+  font-family: 'Yantramanav', sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  background-color: #fff;
+  color: #333;
+  display: inline-block;
+  padding: 10px 20px;
+  border: 1px solid #999; }
+
 .text-block {
   line-height: 2; }
   .text-block a {
