--- a/sass/style.scss
+++ b/sass/style.scss
@@ -559,6 +559,17 @@ body {
 		border-left: 1px solid #d5d5d5;
 		padding-left: 20px;
 	}
+
+	.prototype-link {
+		font-family: 'Yantramanav', sans-serif;
+		font-size: 16px;
+		font-weight: normal;
+		background-color: #fff;
+		color: #333;
+		display: inline-block;
+		padding: 10px 20px;
+		border: 1px solid #999;
+	}
 }
 
 .text-block {
