--- a/sass/style.scss
+++ b/sass/style.scss
@@ -459,6 +459,11 @@ body {
 	}
 }
 
+.sayabc-intro {
+	@extend .work-intro;
+	background-color: #d2f5da;
+}
+
 .snapstyle-intro {
 	@extend .work-intro;
 	background-color: #ffe0e6;
@@ -603,6 +608,14 @@ body {
 	@include media-breakpoint-up(lg) {
 		margin-right: 120px;
 		margin-left: 120px;
+	}
+}
+
+.sayabc-summary {
+	@extend .work-summary;
+
+	h2 {
+		color: #44c661;
 	}
 }
 
